--- a/.github/workflows/echo.yml
+++ b/.github/workflows/echo.yml
@@ -22,12 +22,12 @@ jobs:
   inputs:
     runs-on: ubuntu-latest
     outputs:
-      version: ${{ steps.input.outputs.version }}
+      version: ${{ fromJSON(steps.input.outputs.version) }}
     steps:
       - name: input
         id: input
         run: |
-          echo "version=1.2.3.84354" >> $GITHUB_OUTPUT
+          echo '["1", "2", "3", "84354"]' >> $GITHUB_OUTPUT
 
   test:
     runs-on: ubuntu-latest
