--- a/.github/workflows/echo.yml
+++ b/.github/workflows/echo.yml
@@ -27,7 +27,7 @@ jobs:
       - name: input
         id: input
         run: |
-          echo '["1", "2", "3", "84354"]' >> $GITHUB_OUTPUT
+          echo 'version=["1", "2", "3", "84354"]' >> $GITHUB_OUTPUT
 
   test:
     runs-on: ubuntu-latest
@@ -38,3 +38,4 @@ jobs:
         id: input
         run: |
           echo "${{ needs.inputs.outputs.version }}"
+          echo "${{ join(needs.inputs.outputs.version, '.') }}"
