--- a/.github/workflows/echo.yml
+++ b/.github/workflows/echo.yml
@@ -37,4 +37,4 @@ jobs:
       - name: input
         id: input
         run: |
-          echo "${{ needs.inputs.outputs.version }}"
+          echo "${{ fromJSON(needs.inputs.outputs.version)[0] }}"
